ng build --prod

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
 	<br><hr>
 	<div class="p text-center mt-4">This website is made by Stinnia Hansen Kleist.<br><br>
 	It is made for the finishing exam for the Multi media design education at</div>
-	<img class="mx-auto d-block mt-3" src="../../assets/cphbusiness.png" alt="cphbusiness">
+	<img class="mx-auto d-block mt-3" src="assets/cphbusiness.png" alt="cphbusiness">
 	</div>
 	
 	<div class="text-center mt-4"><strong>Kontakt</strong><br>
