--- a/src/app/dictionary-search/dictionary-search.component.html
+++ b/src/app/dictionary-search/dictionary-search.component.html
@@ -4,9 +4,12 @@
   type="text"
   #searchInput
   (keyup)="search(searchInput.value)"
-  placeholder="Search for a word"
-  class="input form-control form-control-lg form-control-borderless shadow mb-5 bg-white rounded"
+  placeholder="Search for a word*"
+  class="input form-control form-control-lg form-control-borderless shadow mb-3 bg-white rounded"
 />
+	<p class="text-center"><small>*The search bar is case sensitive, start your search with a big letter. <br>
+	Example: Monday<br>
+	Not: monday</small></p>
 	</div>
 
 	</section>
